# arg-parser

./: CMakeLists.txt
include/: ArgData.h  ArgParser.h
src/: ArgParser.cpp  main.cpp
